# nixie

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: nixie.hpp  terminal.hpp  widget.hpp
include/events/: Event.hpp  KeyEvent.hpp
include/ui/: Position.hpp
include/widgets/: Widget.hpp  text.hpp
src/: terminal.cpp
src/widgets/: text.cpp
